Primer commit del sitio

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
              <nav id="main-nav" class="main-nav" aria-label="Navegación principal">
                 <ul>
                     <!-- !! NUEVO: Enlace a Inicio !! -->
-                    <li><a href="/">Inicio</a></li>
+                    <li><a href=".">Inicio</a></li>
 
                     <!-- Elemento de Menú con Desplegable para Servicios -->
                     <li class="has-dropdown dropdown-servicios">
@@ -108,20 +108,20 @@
                             Servicios <i class="fas fa-chevron-down fa-xs nav-arrow"></i>
                         </a>
                         <ul class="dropdown-menu" aria-label="Submenú de servicios">
-                            <li><a href="/Servicios/videovigilancia-empresas.html">Videovigilancia Empresas</a></li>
-                            <li><a href="/Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></li>
-                            <li><a href="/Servicios/infraestructura-telecom.html">Infraestructura Crítica</a></li>
-                            <li><a href="/Servicios/mantenimiento-redes.html">Mantenimiento Urgente</a></li>
-                            <li><a href="/Servicios/soluciones-iot.html">Automatización / IoT</a></li>
-                            <li><a href="/Servicios/internet-rural.html">Internet Rural Empresas</a></li>
+                            <li><a href="Servicios/videovigilancia-empresas.html">Videovigilancia Empresas</a></li>
+                            <li><a href="Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></li>
+                            <li><a href="Servicios/infraestructura-telecom.html">Infraestructura Crítica</a></li>
+                            <li><a href="Servicios/mantenimiento-redes.html">Mantenimiento Urgente</a></li>
+                            <li><a href="Servicios/soluciones-iot.html">Automatización / IoT</a></li>
+                            <li><a href="Servicios/internet-rural.html">Internet Rural Empresas</a></li>
                         </ul>
                     </li>
                     <!-- Fin Elemento de Menú Desplegable -->
 
                     <li><a href="#clientes">Clientes</a></li> <!-- Apunta a sección en esta página -->
                     <li><a href="#faq">FAQ</a></li>       <!-- Apunta a sección en esta página -->
-                    <li><a href="/Blog/">Blog</a></li>         <!-- Apunta al índice del Blog -->
-                    <li><a href="/contacto.html" class="nav-cta-button">Contacto</a></li>                
+                    <li><a href="Blog/">Blog</a></li>         <!-- Apunta al índice del Blog -->
+                    <li><a href="contacto.html" class="nav-cta-button">Contacto</a></li>                
                 </ul>
             </nav>
             <!-- === FIN Navegación Principal === -->
