Actualizar index.html con la nueva navegación

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <!-- === Sección Servicios con enlaces a páginas de detalle === -->
 <section id="servicios" class="services section-padding">
     <div class="container">
-        <h2 class="section-title">Nuestros Servicios de Telecomunicaciones para Empresas en Almería</h2>
+        <h2 class="section-title">Nuestros Servicios de Telecomunicaciones para Empresas en </h2>
         <div class="service-grid">
 
             <!-- Tarjeta de Servicio 1: Videovigilancia -->
